hphp/test/zend/good/ext/standard/tests/strings/fprintf_variation_006_64bit.php.skipif
<?php
$data_file = dirname(__FILE__) . '/fprintf_variation_006_64bit.phpt.txt';
if (!($fp = fopen($data_file, 'w'))) {
  die('skip File fprintf_variation_006_64bit.phpt.txt could not be created');
}
if (PHP_INT_SIZE != 8) die("skip this test is for 64bit platform only");
?>