hphp/test/zend/bad/ext/standard/tests/file/bug47767.php.skipif
<?php
if(substr(PHP_OS, 0, 3) != 'WIN' ) {
		die('skip windows only test');
}
if(PHP_WINDOWS_VERSION_MAJOR < 6)  {
        die('skip windows version 6.0+ only test');
}

$ret = exec('mklink rename_variation13tmp.lnk ' . __FILE__ .' 2>&1', $out);
if (strpos($ret, 'privilege')) {
	die('skip. SeCreateSymbolicLinkPrivilege not enable for this user.');
}
?>